Systemization table added

--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -23,41 +23,60 @@
 \begin{table}[h!]
 \centering
 
-\begin{tabular}{|c|c|c|l|}
+\begin{tabular}{|c|c|c|c|l|}
 
 \hline
 \rowcolor{LightSteelBlue}
- \textbf{DApp Category}    										& \textbf{Names} & Rank \\  \hline
-\multirow{6}{*}{Exchanges} 										& IDEX & 1 \\ 
-															& \cellcolor{LightGrey} \textbf{ForkDelta, EtherDelta} & 2 \\
-															& \cellcolor{LightGrey} \textbf{Bancor} & 7 \\
-															& The Token Store & 13 \\
-															& LocalEthereum & 14 \\
-															& Kyber & 22 \\ 
-															& \cellcolor{LightGrey} \textbf{0x Protocol} & 23 \\ \hline
+\textbf{Category} & \textbf{Sub-Category}    					         & \textbf{Examples} & Rank \\  \hline
 
-\multirow{9}{*}{\shortstack{Crypto-Collectible \\ Games \\ (ERC-721)}}
-															& \cellcolor{LightGrey} \textbf{CryptoKitties} & 3 \\  
-															& Ethermon & 4\\
-															& Cryptogirl & 9\\
-															& Gods Unchained TCG & 12\\
-															& Blockchain Cuties & 15\\
-															& ETH.TOWN! & 16\\
-															& 0xUniverse & 18\\
-															& MLBCrypto Baseball & 19\\
-															& HyperDragons & 25\\ \hline
+\multirow{4}{*}{Backed} 		                                                                 & Redeemable and Directly-Backed  & Gemini Dollar & 52 \\ \cline{2-2}
+                                                                                                                 & Non-Redeemable and Directly-Backed  & Tether & 6 \\ \cline{2-2}
+                                                                                                                 & Non-Redeemable and indirectly-Backed  & example & rank \\ \cline{2-2}
+                                                                                                                 & Redeemable and indirectly-Backed & Dai & 57 \\  \hline
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+\multirow{4}{*}{Intervention-based}                                                           & Currency Board  & example & rank \\ \cline{2-2}
+                                                                                                                 & Algorithmic with subjective external information  & example & rank \\ \cline{2-2}
+                                                                                                                 & Algorithmic with objective external information  & example & rank \\ \cline{2-2}
+                                                                                                                 & Algorithmic with only internal information & example & rank \\ \hline
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+                                                                                                                 
+%\multirow{6}{*}{Exchanges} 									 &
+%															& \cellcolor{LightGrey} \textbf{ForkDelta, EtherDelta} & 2 \\
+%															& \cellcolor{LightGrey} \textbf{Bancor} & 7 \\
+%															& The Token Store & 13 \\
+%															& LocalEthereum & 14 \\
+%															& Kyber & 22 \\ 
+%															& \cellcolor{LightGrey} \textbf{0x Protocol} & 23 \\ \hline
 
-					
-\multirow{8}{*}{Gambling}										& \cellcolor{LightGrey} \textbf{Fomo3D} & 5 \\  
-															& DailyDivs & 6 \\													& PoWH 3D & 8	 \\ 
-															& FomoWar & 10 \\
-															& FairDapp & 11\\
-															& Zethr & 17 \\
-															& dice2.win & 20 \\ 
-															& Ether Shrimp Farm & 21 \\  \hline	
-
-							
-\multirow{1}{*}{Name Services}									& \cellcolor{LightGrey} \textbf{Ethereum Name Service} & 24  \\  \hline	
+%\multirow{9}{*}{\shortstack{Crypto-Collectible \\ Games \\ (ERC-721)}}
+%															& \cellcolor{LightGrey} \textbf{CryptoKitties} & 3 \\  
+%															& Ethermon & 4\\
+%															& Cryptogirl & 9\\
+%															& Gods Unchained TCG & 12\\
+%															& Blockchain Cuties & 15\\
+%															& ETH.TOWN! & 16\\
+%															& 0xUniverse & 18\\
+%															& MLBCrypto Baseball & 19\\
+%															& HyperDragons & 25\\ \hline
+%
+%					
+%\multirow{8}{*}{Gambling}										& \cellcolor{LightGrey} \textbf{Fomo3D} & 5 \\  
+%															& DailyDivs & 6 \\													& PoWH 3D & 8	 \\ 
+%															& FomoWar & 10 \\
+%															& FairDapp & 11\\
+%															& Zethr & 17 \\
+%															& dice2.win & 20 \\ 
+%															& Ether Shrimp Farm & 21 \\  \hline	
+%
+%							
+%\multirow{1}{*}{Name Services}									& \cellcolor{LightGrey} \textbf{Ethereum Name Service} & 24  \\  \hline	
 
 
 \end{tabular}
