--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -71,7 +71,7 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Jeremy: Table here
 
 \subsection{Redeemable and Directly-Backed.}
-% Description of how it works: Desposit in bank, etc. Regular audits are needed to ensure that the stablecoin is indeed fully collateralized
+% Description of how it works: Desposit in bank, etc. Regular audits are needed to ensure that the stablecoin is indeed fully collateralized (a few people can redeem it and it shows that there is actually reserve, so audit is not really needed)
 % Justification that bids will never exceed $1: an arbitrageur will pay $1 to mint 1 XSC and the 1 XSC for the bid
 % Justification that offers will be less than $1: an arbitrageur will purchase the 1 XSC and redeem it for $1
 % Risk: not redeemable -> redemption is not 100%, the coin will be offered at less than $1. E.g., offers of $0.50, says 50% it can't be redeemed.
@@ -79,12 +79,12 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 
 
 \subsection{Non-Redeemable and Directly-Backed.}
-% Description of how it works. Deposit in bank, etc
+% Description of how it works. Deposit in bank, etc. Regular audits are needed to ensure that the stablecoin is indeed fully collateralized (This is important especially in this case (custodianship))
 % Justification that bids will never exceed $1:
 % Justification that offers will be less than $1
 % Examples: Tether
 % Remarks:
-
+% 
 
 \subsection{Non-Redeemable and indirectly-Backed.}
 % Description of how it works.
@@ -100,16 +100,18 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Justification that offers will be less than $1
 % Examples:
 
- \subsection{Currency Board.}
+
+
+\subsection{Intervention-based} % it used to be Algorithmic
+
+% Control system: input (metrics), make a decision, implement the intervention
+% We cannot prove that something here works or not. It is all heuristics. We know this because central banks themselves operate on heuristics that change every couple of decades. Even if we cannot say something does work, we can point out a few suggestions that it will not work. Game-able inputs, inputs/interventions that have not worked for currency.
+ 
+\subsubsection{Currency Board.}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
 % Examples:
-
-\subsection{Algorithmic}
-
-% Control system: input (metrics), make a decision, implement the intervention
-% We cannot prove that something here works or not. It is all heuristics. We know this because central banks themselves operate on heuristics that change every couple of decades. Even if we cannot say something does work, we can point out a few suggestions that it will not work. Game-able inputs, inputs/interventions that have not worked for currency.
 
 \subsection{Algorithmic with subjective external information}
 % Description of how it works.
@@ -323,58 +325,5 @@ Lending is difficult to be deployed on the blockchains, bdue to the monetary ins
 
 Although cryptocurrencies, especially Bitcoin, play a revolutionary role in financial systems, they are yet not easy to transact with due to their volatile characteristics. Therefore with stablecoins, one can benefit from decentralized nature of the token, while there is no price volatility risk. In addition, stablecoins make the cross border payments, remittances, easier.
 
-
-
-\section{January 9 Meeting notes}
-\begin{itemize}
-	\item discussion about the price of a coin backed by fiat currency:
-	what happens to the value of token if half of the supply disappears?
-	what if everyone wants to sell their tokens and get the CAD, USD etc equivalent?
-	why would you want to sell the tokens?: not a successful currency then
-	\item BTC: nothing backs it, not unit of account, good medium of exchange
-	\item Gold: not unit of account, not medium of exchange
-	\item why do we overload the function of money? (no need to fulfill all three properties)
-	\item IMF's SDR (Special Drawing Rights) only Unit of account?
-	\item The model of backing a currency works? Why, why not?
-	\item Discussion about BTC and the hydrocost
-	\item Controlling the amount of money in the circulation: government bonds
-	\item What is stability?
-	Who decides?
-	What do you change?
-	What parameters to consider to apply the change?
-	\item In the case of BTC, cryptocurrencies the number of transactions, how old the coin is affects the value?
-	\item Can a method to stabilize a currency be gamed?: is this method economically sound?
-	\item Bank of England: whitepapers
-	\item Coindesk: list of stablecoins mentioned.
-\end{itemize}
-
-\subsection {Discussion on the notes}
-\begin{itemize}
-\item What if sob steals all of the reserve (CAD)? then there are two scenarios: 1) people know the reserve is gone so they start converting their tokens back to CAD (for example) so the price of the token will drop. 2) people do not know that the reserve is gone and nobody goes to bank to exchange his token, in this case, it does not affect the price but at the end the token goes bankrupt.
-What if only half of the reserves disappears? nobody goes to the bank to ask for CAD and  it doesn’t change anything, like USD and gold.
-
-\item Q: We may want to ask this from ourselves when writing the paper: should we actually design a currency (meet 3 properties)
-
-\item supply and demand :government makes people use their currency
-
-\item BTC and Hydro are not directly connected (not pegging) BTC is not backed by anything
-
-\item  as soon a sth price goes more that 1 dollar > you sell people tokens for 1 dollar so that the price stays the same (currency boards) : pegging : it works until you have your reserves.
-In Canada: they control the amount of money in circulation, increase decrease the supply of money, how they increase the supply of money now? whom do they give it? Answer: they buy things (open market operations)- they go out and buy governments bonds, they borrow the money, from whom? they announce it public so in 5 years they pay you + 5\% (IOU) \par
-They’re doing this based on some information they get, to stabilize the economics but based on what? first it was based on the exchange rate of the CAD (failed) now they are looking at interest rate: there is a certain interest rate they look for, the interest rate where banks lend money to other banks
-
-\item central bank tried to stabilizes the economy based on exchange rate but it failed.
-\item in BTC :
-\begin {itemize}
-\item what nub are you turning? (coinbase for now but there could be more)
-\item who will turn the nub? A: a  person B: algorithm that blockchain decides BUT how blockchain knows based on what they could turn the nub (third questions)
-\item what are you looking at to know when to turn the nub? number of tx in block, liquidity in money
-\end{itemize}
-
-\textbf{TO DO:}
-search query on coindesk and we found these projects that are mostly used : looking for the project name \textbf{(Coindesk : every article mentioning stable coin until January 11, 2019)}
-find a report that says how central bank stabilize : bank of England has a bunch of white papers -> "Banks used the exchange rate but it failed “ phrase is from one of it white papers.
-
-\end{itemize}
 
 
