Edits on the sectioning

--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -16,6 +16,10 @@
 \SetWatermarkHorCenter{0.2\textwidth}
 \SetWatermarkColor{blue}
 \SetWatermarkText{Working Draft}
+
+%
+%\setcounter{secnumdepth}{3}
+%\setcounter{tocdepth}{3}
 % = = = = = Title = = = = = %
 
 \begin{document}
