--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -70,6 +70,8 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Jeremy: How do we make a stable coin.
 % Jeremy: Table here
 
+\section{Backed}
+
 \subsection{Redeemable and Directly-Backed.}
 % Description of how it works: Desposit in bank, etc. Regular audits are needed to ensure that the stablecoin is indeed fully collateralized (a few people can redeem it and it shows that there is actually reserve, so audit is not really needed)
 % Justification that bids will never exceed $1: an arbitrageur will pay $1 to mint 1 XSC and the 1 XSC for the bid
@@ -102,12 +104,12 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 
 
 
-\subsection{Intervention-based} % it used to be Algorithmic
+\section{Intervention-based} % it used to be Algorithmic
 
 % Control system: input (metrics), make a decision, implement the intervention
 % We cannot prove that something here works or not. It is all heuristics. We know this because central banks themselves operate on heuristics that change every couple of decades. Even if we cannot say something does work, we can point out a few suggestions that it will not work. Game-able inputs, inputs/interventions that have not worked for currency.
  
-\subsubsection{Currency Board.}
+\subsection{Currency Board}
 % Description of how it works.
 % Justification that bids will never exceed $1
 % Justification that offers will be less than $1
