--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -37,15 +37,18 @@
                                                                                                                  
                                                                                                                  
                                                                                                                  
-\multirow{4}{*}{Intervention-based}                                                           & Currency Board  & example & rank \\ \cline{2-2}
+\multirow{4}{*}{Intervention-based}                                                           & Currency Board  & Nubits & 892 \\ \cline{2-2}
                                                                                                                  & Algorithmic with subjective external information  & example & rank \\ \cline{2-2}
                                                                                                                  & Algorithmic with objective external information  & example & rank \\ \cline{2-2}
                                                                                                                  & Algorithmic with only internal information & example & rank \\ \hline
                                                                                                                  
                                                                                                                  
                                                                                                                  
-                                                                                                                 
-                                                                                                                 
+Orphaned project & \shortstack{Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken   \\ BitCNY,StableUSD (USDS), Stronghold USD, Petro, Terracoin, Saga, BNDES token, Ekon, GMO Yen (GJY) \\ Grandshores yen-pegged, Novatti AUD, UPUSD, WBTC, Abra, Ampleforth,  AUD-pegged collateralized stablecoin(emparta) }
+%Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken \\
+%Orphaned project & Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken \\
+%BitCNY,StableUSD (USDS), Stronghold USD, Petro, Terracoin, Saga, BNDES token, Ekon, GMO Yen (GJY) \\
+%Grandshores yen-pegged, Novatti AUD, UPUSD, WBTC, Abra, Ampleforth,  AUD-pegged collateralized stablecoin(emparta)  & & \\ \hline
                                                                                                                  
 %\multirow{6}{*}{Exchanges} 									 &
 %															& \cellcolor{LightGrey} \textbf{ForkDelta, EtherDelta} & 2 \\
