--- a/stable-coin-paper/setup/packages.tex
+++ b/stable-coin-paper/setup/packages.tex
@@ -3,6 +3,7 @@
 %------------------------LNCS----------------------%
 
 %None
+\usepackage{fullpage}
 
 %------------------------Packages----------------------%
 
