--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -23,64 +23,39 @@
 \begin{table}[h!]
 \centering
 
-\begin{tabular}{|c|c|c|c|l|}
+\begin{tabular}{|l|l|l|l|l|}
 
 \hline
 \rowcolor{LightSteelBlue}
-\textbf{Category} & \textbf{Sub-Category}    					         & \textbf{Examples} & Rank \\  \hline
+\textbf{Category} & \textbf{Sub-Category} & \textbf{Examples} & Rank \\  \hline
 
-\multirow{4}{*}{Backed} 		                                                                 & Redeemable and Directly-Backed  & Gemini Dollar & 52 \\ \cline{2-2}
-                                                                                                                 & Non-Redeemable and Directly-Backed  & Tether & 6 \\ \cline{2-2}
-                                                                                                                 & Non-Redeemable and indirectly-Backed  & example & rank \\ \cline{2-2}
-                                                                                                                 & Redeemable and indirectly-Backed & Dai & 57 \\  \hline
+\multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable}					& \textbf{USDC} & 20 \\ \cline{3-4}
+						&														& TrueUSD & 26 \\ \cline{3-4}	
+						&														& Paxos & 38 \\ \cline{3-4}												
+						&														& Gemini Dollar & 52 \\ \cline{3-4}
+						&														& StableUSD (USDS) & 685 \\ \cline{3-4}
+						&														& Stronghold USD & 891 \\ \cline{3-4}
+						&														& Petro & 1210 \\ \cline{3-4}
+						&														& \multicolumn{1}{p{5cm}|}{Ekon, WBTC, emparta} & $\perp$ \\ \cline{2-4}
+						& \multirow{6}{*}{Directly-Backed}  								& \textbf{Tether} & 6 \\ \cline{3-4}
+						&														& EURSToken & 95 \\ \cline{3-4}
+						&														& BitCNY & 304 \\ \cline{3-4}
+						&														& Terracoin & 1280 \\ \cline{3-4}
+						&														& Saga & 1495 \\  \cline{3-4}
+						&														& \multicolumn{1}{p{5cm}|}{GJY, Novatti AUD, UPUSD} & $\perp$ \\ \cline{2-4} 						
+						%& \multirow{1}{*}{Non-Redeemable and Indirectly-Backed}  			&  &  \\ \cline{2-4}
+						& \multirow{2}{*}{Indirectly-Backed}								& \textbf{Dai} & 57 \\ \cline{3-4}
+                                                &														& BitUSD & 398 \\  \cline{1-4}
+ 
                                                                                                                  
                                                                                                                  
                                                                                                                  
-                                                                                                                 
-\multirow{4}{*}{Intervention-based}                                                           & Currency Board  & Nubits & 892 \\ \cline{2-2}
-                                                                                                                 & Algorithmic with subjective external information  & example & rank \\ \cline{2-2}
-                                                                                                                 & Algorithmic with objective external information  & example & rank \\ \cline{2-2}
-                                                                                                                 & Algorithmic with only internal information & example & rank \\ \hline
-                                                                                                                 
-                                                                                                                 
-                                                                                                                 
-Orphaned project & \shortstack{Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken   \\ BitCNY,StableUSD (USDS), Stronghold USD, Petro, Terracoin, Saga, BNDES token, Ekon, GMO Yen (GJY) \\ Grandshores yen-pegged, Novatti AUD, UPUSD, WBTC, Abra, Ampleforth,  AUD-pegged collateralized stablecoin(emparta) }
-%Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken \\
-%Orphaned project & Basis, TrueUSD, Paxos, BitUSD, Carbon, Nomin, USDC,EURSToken \\
-%BitCNY,StableUSD (USDS), Stronghold USD, Petro, Terracoin, Saga, BNDES token, Ekon, GMO Yen (GJY) \\
-%Grandshores yen-pegged, Novatti AUD, UPUSD, WBTC, Abra, Ampleforth,  AUD-pegged collateralized stablecoin(emparta)  & & \\ \hline
-                                                                                                                 
-%\multirow{6}{*}{Exchanges} 									 &
-%															& \cellcolor{LightGrey} \textbf{ForkDelta, EtherDelta} & 2 \\
-%															& \cellcolor{LightGrey} \textbf{Bancor} & 7 \\
-%															& The Token Store & 13 \\
-%															& LocalEthereum & 14 \\
-%															& Kyber & 22 \\ 
-%															& \cellcolor{LightGrey} \textbf{0x Protocol} & 23 \\ \hline
-
-%\multirow{9}{*}{\shortstack{Crypto-Collectible \\ Games \\ (ERC-721)}}
-%															& \cellcolor{LightGrey} \textbf{CryptoKitties} & 3 \\  
-%															& Ethermon & 4\\
-%															& Cryptogirl & 9\\
-%															& Gods Unchained TCG & 12\\
-%															& Blockchain Cuties & 15\\
-%															& ETH.TOWN! & 16\\
-%															& 0xUniverse & 18\\
-%															& MLBCrypto Baseball & 19\\
-%															& HyperDragons & 25\\ \hline
-%
-%					
-%\multirow{8}{*}{Gambling}										& \cellcolor{LightGrey} \textbf{Fomo3D} & 5 \\  
-%															& DailyDivs & 6 \\													& PoWH 3D & 8	 \\ 
-%															& FomoWar & 10 \\
-%															& FairDapp & 11\\
-%															& Zethr & 17 \\
-%															& dice2.win & 20 \\ 
-%															& Ether Shrimp Farm & 21 \\  \hline	
-%
-%							
-%\multirow{1}{*}{Name Services}									& \cellcolor{LightGrey} \textbf{Ethereum Name Service} & 24  \\  \hline	
-
+\multirow{5}{*}{Intervention}                                                           
+						& \multirow{1}{*}{Market} 										& Nubits & 892 \\ \cline{2-4}
+						& \multirow{1}{*}{Algorithmic with subjective external information}  		& Nomin* & $\perp$  \\ \cline{2-4}
+						& \multirow{2}{*}{Algorithmic with objective external information}  		& Carbon* & 1262 \\ \cline{3-4}
+						&														& Ampleforth* & $\perp$ \\ \cline{2-4}
+						& \multirow{1}{*}{Algorithmic with only internal information} 			& Basis & $\perp$ \\ \hline
 
 \end{tabular}
 \caption{\footnotesize{Systemization the current stablecoin projects} on January 11, 2019. The Projects that are in bold are discussed in this paper.}
