--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -72,6 +72,32 @@ To explain Bitcoin's exchange rate with fiat currencies, an oft-repeated theory 
 
 If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a literal shitcoin out of the result --- is that coin worth \$100 because it is ``backed'' by \$100 worth of steak?
 
+\subsection{plot explanations}
+
+
+%=======Plot Legend Explanation===========%
+\begin{table}[t]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Direction} & \textbf{Interpretation}   \\ \hline
+
+         1                & The plot is stable against x axis while gaining value against y axis. \\ \hline
+         2                & The plot is gaining value against both x and y axes. \\ \hline
+         3                & The plot is stable against y axis while gaining value against x axis. \\ \hline
+         4                & The plot is gaining value against x axis, while loosing value against y axis. \\ \hline
+         5                & The plot is stable against x axis while loosing value against y axis. \\ \hline
+         6                & The plot is loosing value against both x and y axes. \\ \hline
+         7                & The plot is stable against y axis while loosing value against x axis. \\ \hline
+         8                & The plot is loosing value against x axis, while gaining value against y axis. \\ \hline
+          
+\end{tabular}
+\caption{\footnotesize{The interpretation of the plots.}\label{tab:plotlegend}}
+\end{table}
+%===================%
+
+
+
 %==========================================%
 
 \section{Systemization of stablecoins and Justification}
