--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -44,7 +44,9 @@
 \bibliography{bib/stablecoinRef}
 %\nocite{*}
 
-\clearpage
-%\appendix
+% = = = = = End Notes = = = = = %
+
+\input{sections/appendix}
+% = = = = = End Notes = = = = = %
 
 \end{document}
