Fix the tables captions

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -92,6 +92,7 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
          8                & The plot is loosing value against x axis, while gaining value against y axis. \\ \hline
           
 \end{tabular}
+\vspace{1em}
 \caption{\footnotesize{The interpretation of the plots.}\label{tab:plotlegend}}
 \end{table}
 %===================%
