--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -26,7 +26,7 @@
 \begin{tabular}{|l|l|l|l|l|}
 
 \hline
-\rowcolor{LightSteelBlue}
+\rowcolor{lightgray}
 \textbf{Category} & \textbf{Sub-Category} & \textbf{Examples} & Rank \\  \hline
 
 \multirow{16}{*}{Backed}		& \multirow{8}{*}{Directly-Backed \& Redeemable}					& \textbf{USDC} & 20 \\ \cline{3-4}
@@ -58,8 +58,9 @@
 						& \multirow{1}{*}{Algorithmic with only internal information} 			& Basis & $\perp$ \\ \hline
 
 \end{tabular}
+\vspace{1em}
 \caption{\footnotesize{Systemization the current stablecoin projects} on January 11, 2019. The Projects that are in bold are discussed in this paper.}
 \label{tab:stablecoins}
-\vspace{1em}
+\vspace{3em}
 \end{table}
 % ------------------------------------------------------------------------------------------------------------------------------------------------%
