--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -1,39 +1,23 @@
 % !TEX encoding = UTF-8 Unicode
-\documentclass[envcountsect]{llncs}
 
-\pagestyle{headings} 
+\documentclass[letterpaper,10pt]{article}
 \bibliographystyle{abbrv}
-
 
 % = = = = = Packages = = = = = %
 
 \input{setup/packages}
 \input{setup/macros}
 
-
-%
-%\setcounter{secnumdepth}{3}
-%\setcounter{tocdepth}{3}
 % = = = = = Title = = = = = %
 
 \begin{document}
-\frontmatter
-\mainmatter
-
 \title{Analysis on the Current State of Stablecoins}
-\author{Didem Demirag (40052597) \\ Seyedehmahsa Moosavi (27403577)}
-%\author{}
-\institute{Concordia University}
-
-
-
-
+\author{Didem Demirag \and Seyedehmahsa Moosavi \and Jeremy Clark}
+\date{}
 \maketitle
 
-
-
-
 % = = = = = Abstract = = = = = %
+
 % = = = = = Main Body = = = = = %
 
 \input{sections/stablecoin}
