live from the train

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -84,14 +84,10 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 \hline
 \textbf{Direction} & \textbf{Interpretation}   \\ \hline
 
-         1                & The plot is stable against x axis while gaining value against y axis. \\ \hline
-         2                & The plot is gaining value against both x and y axes. \\ \hline
-         3                & The plot is stable against y axis while gaining value against x axis. \\ \hline
-         4                & The plot is gaining value against x axis, while loosing value against y axis. \\ \hline
-         5                & The plot is stable against x axis while loosing value against y axis. \\ \hline
-         6                & The plot is loosing value against both x and y axes. \\ \hline
-         7                & The plot is stable against y axis while loosing value against x axis. \\ \hline
-         8                & The plot is loosing value against x axis, while gaining value against y axis. \\ \hline
+         1/5                & $Y$ is losing (1) / gaining (5) value \\ \hline
+         2/6                & Plotted asset is gaining (2) / losing (6) value \\ \hline         
+         3/7                & $X$ is losing (3) / gaining (7) value \\ \hline
+         4/8                & \multicolumn{1}{p{12cm}|}{Plotted asset is gaining (4) / losing (8) value against $X$, while losing (4) / gaining (8) value against $Y$} \\ \hline
           
 \end{tabular}
 \vspace{1em}
