Add some notes to section 4

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -118,6 +118,8 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Justification that offers will be less than $1: an arbitrageur will purchase the 1 XSC and redeem it for $1
 % Risk: not redeemable -> redemption is not 100%, the coin will be offered at less than $1. E.g., offers of $0.50, says 50% it can't be redeemed.
 % Examples: Gemini
+% Mahsa: Should we talk about these two recent incidents in this section?
+% According to the recent blogpost in coindesk (https://www.coindesk.com/winklevoss-crypto-gemini-gusd-stablecoin-redemption) Gemini has closed the account of some users and in some cases do not let redemption (some KYC issues) +     Paxos has has the same issue, although they let the user redeem their assets and then closed their account (https://www.ccn.com/paxos-standard-hassling-ethereum-traders-trying-to-redeem-stablecoin-pax-for-dollars)
 
 
 \subsection{Non-Redeemable and Directly-Backed.}
